--- a/pullloadmore/src/main/res/layout/content_main.xml
+++ b/pullloadmore/src/main/res/layout/content_main.xml
@@ -7,9 +7,9 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activity.MainActivity"
     tools:showIn="@layout/activity_main">
-    <ImageButton
-        android:src="@drawable/bga_refresh_loding"
-        android:id="@+id/iv_loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+    <com.orange.pullloadmorelib.PullLoadmoreListView
+        android:id="@+id/lv_pull_loadmore"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
